maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:2: error: not found: value random3
  var r = random3()
          ^WallFollowerMaze:10: error: not found: value random3
    r = random3()
        ^